--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -74,7 +74,7 @@
                     android:layout_marginStart="14dp"
                     android:layout_marginEnd="14dp"
                     android:layout_marginTop="6dp"
-                    android:layout_marginBottom="6dp"
+                    android:layout_marginBottom="8dp"
                     android:paddingTop="4dp">
 
                     <androidx.cardview.widget.CardView
@@ -184,7 +184,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_below="@id/card_view_personal_info"
                     android:padding="0dp"
-                    android:background="@drawable/background_round_white">
+                    android:background="@drawable/background_round_white"
+                    android:visibility="gone">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
