Success Dialog on Agent Deposit

--- a/app/src/main/res/layout/dialog_successful_message.xml
+++ b/app/src/main/res/layout/dialog_successful_message.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Details from eMaisha Pay"
+            android:text=""
             android:textSize="16sp"
             android:textColor="#222222"
             android:textStyle="bold"/>
