--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -56,11 +56,12 @@
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
                 android:layout_margin="12dp"/>
-            <ImageView
+            <eu.livotov.labs.android.camview.ScannerLiveView
                 android:id="@+id/camera_preview"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:layout_centerHorizontal="true"
                 android:layout_below="@id/text_scan_pay_title"/>
 
             <RelativeLayout
@@ -115,4 +116,3 @@
 
 
 </RelativeLayout>
-</layout>
