Completed and linked the coming soon dialog and edited a few other interfaces

--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -348,7 +348,7 @@
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_gravity="end"
-                                android:src="@android:drawable/ic_menu_edit" />
+                                android:src="@drawable/ic_edit_profile" />
 
 
                         </FrameLayout>
@@ -522,7 +522,7 @@
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_gravity="end"
-                                android:src="@android:drawable/ic_menu_edit" />
+                                android:src="@drawable/ic_edit_profile" />
 
 
                         </FrameLayout>
@@ -727,7 +727,7 @@
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_gravity="end"
-                                android:src="@android:drawable/ic_menu_edit" />
+                                android:src="@drawable/ic_edit_profile" />
 
                         </FrameLayout>
 
