--- a/app/src/main/res/drawable/ic_edit_profile.xml
+++ b/app/src/main/res/drawable/ic_edit_profile.xml
@@ -1,12 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="25.738dp"
-    android:height="26.826dp"
-    android:viewportWidth="25.738"
-    android:viewportHeight="26.826">
-  <path
-      android:pathData="M1.994,21.461h0.145l7,-1.523a0.689,0.689 0,0 0,0.362 -0.181L21.352,7.9A4.568,4.568 0,0 0,22.689 4.641a4.712,4.712 0,0 0,-1.341 -3.3A4.567,4.567 0,0 0,18.089 0a4.459,4.459 0,0 0,-3.263 1.378L3.009,13.232a0.653,0.653 0,0 0,-0.218 0.326l-1.522,7a0.8,0.8 0,0 0,0.218 0.689A0.725,0.725 0,0 0,1.994 21.461ZM18.089,1.451A3.154,3.154 0,0 1,21.244 4.6q0,0.018 0,0.036a3.045,3.045 0,0 1,-0.906 2.211l-4.459,-4.5A3.118,3.118 0,0 1,18.089 1.451ZM14.864,3.408l4.459,4.459L8.989,18.163 4.532,13.74ZM3.952,15.19l3.589,3.589 -4.6,1.015Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M25.013,25.376L0.725,25.376a0.725,0.725 0,0 0,0 1.45L25.013,26.826a0.725,0.725 0,0 0,0 -1.45Z"
-      android:fillColor="#fff"/>
+<vector android:height="24.971586dp" android:viewportHeight="21.971"
+    android:viewportWidth="21.996" android:width="25dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#2d84b7" android:pathData="M0.013,21.349l1.129,-5.1 4.472,4.491L0.628,21.956a0.512,0.512 0,0 1,-0.122 0.015A0.511,0.511 0,0 1,0.013 21.349ZM2.355,15.036L13.677,3.667l4.475,4.492L6.826,19.527ZM14.843,2.5 L16.754,0.581a1.975,1.975 0,0 1,2.8 0l2,2a1.535,1.535 0,0 1,0 2.169L19.318,6.99Z"/>
 </vector>
