--- a/app/src/main/res/layout/fragment_transfer_money.xml
+++ b/app/src/main/res/layout/fragment_transfer_money.xml
@@ -70,9 +70,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
                         android:layout_marginBottom="10dp"
-                        android:src="@drawable/ic_right_chevron_arrow_white"
-                        android:rotation="90" />
+                        android:layout_margin="10dp"
+                        android:src="@drawable/ic_down_chevron" />
 
                 </RelativeLayout>
 
