--- a/app/src/main/res/layout/new_forgot_pin.xml
+++ b/app/src/main/res/layout/new_forgot_pin.xml
@@ -319,28 +319,22 @@
                             android:layout_height="wrap_content"
                             android:layout_margin="15dp"
                             android:layout_weight="1"
-                            android:paddingStart="10dp"
-                            android:paddingEnd="5dp"
                             android:background="@drawable/rectangular_blue_solid"
                             android:text="@string/cancel"
                             android:textStyle="bold"
                             android:textColor="@color/white"
-                            android:textSize="16sp"
-                            android:drawableLeft="@drawable/ic_chevron_left_white"/>
+                            android:textSize="16sp" />
                         <Button
                             android:id="@+id/btn_submit_security_qn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:layout_margin="15dp"
-                            android:paddingEnd="10dp"
-                            android:paddingStart="5dp"
                             android:background="@drawable/rectangular_blue_solid"
                             android:text="@string/submit"
                             android:textStyle="bold"
                             android:textColor="@color/white"
-                            android:textSize="16sp"
-                            android:drawableEnd="@drawable/ic_right_chevron_arrow_white"/>
+                            android:textSize="16sp" />
                     </LinearLayout>
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
