--- a/app/src/main/res/layout/user_summary_details.xml
+++ b/app/src/main/res/layout/user_summary_details.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/windowBackground"
+    android:background="@drawable/dialog_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.12" />
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        app:layout_constraintStart_toEndOf="@id/guideline9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+
 
         <ImageView
             android:id="@+id/edit_personal_info"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="end"
-            android:src="@android:drawable/ic_menu_edit"
-            android:layout_marginEnd="15dp"/>
+            android:src="@drawable/ic_edit_profile"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="5dp"/>
 
         <LinearLayout
             android:layout_height="wrap_content"
@@ -151,4 +164,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
