--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_1.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.MaterialToolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_scan_pay_process_1"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -58,8 +59,8 @@
                 android:layout_margin="12dp"/>
             <eu.livotov.labs.android.camview.ScannerLiveView
                 android:id="@+id/camera_preview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_margin="20dp"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/text_scan_pay_title"/>
@@ -116,3 +117,4 @@
 
 
 </RelativeLayout>
+</layout>
