--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
@@ -167,11 +167,21 @@
             android:cursorVisible="false"/>
 
     </LinearLayout>
+    <TextView
+        android:id="@+id/error_message_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Error"
+        android:textSize="16sp"
+        android:textColor="@color/textRed"
+        android:layout_below="@id/pin_layout"
+        android:layout_centerInParent="true"
+        android:layout_margin="15dp"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/pin_layout">
+        android:layout_below="@id/error_message_txt">
         <LinearLayout
             android:id="@+id/layout_signin"
             android:layout_width="match_parent"
@@ -225,21 +235,21 @@
                     style="@style/keyboard_number_button"
                     android:text="@string/number_one"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp"/>
+                    android:textSize="30sp"/>
 
                 <TextView
                     android:id="@+id/tv_key_2"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_two"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp"/>
+                    android:textSize="30sp"/>
 
                 <TextView
                     android:id="@+id/tv_key_3"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_three"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp"/>
+                    android:textSize="30sp"/>
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -260,21 +270,21 @@
                     style="@style/keyboard_number_button"
                     android:text="@string/number_four"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/tv_key_5"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_five"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/tv_key_6"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_six"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -295,21 +305,21 @@
                     style="@style/keyboard_number_button"
                     android:text="@string/number_seven"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/tv_key_8"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_eight"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
 
                 <TextView
                     android:id="@+id/tv_key_9"
                     style="@style/keyboard_number_button"
                     android:text="@string/number_nine"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
@@ -336,7 +346,7 @@
                     style="@style/keyboard_number_button"
                     android:text="@string/number_zero"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="34sp" />
+                    android:textSize="30sp" />
 
 
                 <ImageView
