--- a/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
+++ b/app/src/main/res/layout/layout_scan_and_pay_process_step_3.xml
@@ -176,7 +176,8 @@
         android:textColor="@color/textRed"
         android:layout_below="@id/pin_layout"
         android:layout_centerInParent="true"
-        android:layout_margin="15dp"/>
+        android:layout_margin="15dp"
+        android:visibility="gone"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
