implemented scan and pay

--- a/app/src/main/res/navigation/wallet_home_navigation.xml
+++ b/app/src/main/res/navigation/wallet_home_navigation.xml
@@ -433,6 +433,10 @@
     <fragment
         android:id="@+id/scanAndPayStep4"
         android:name="com.cabral.emaishapay.fragments.wallet_fragments.ScanAndPayStep4"
-        android:label="ScanAndPayStep4" />
+        android:label="ScanAndPayStep4" >
+        <action
+            android:id="@+id/action_scanAndPayStep4_to_walletHomeFragment2"
+            app:destination="@id/walletHomeFragment2" />
+    </fragment>
 
 </navigation>
