--- a/app/src/main/res/drawable/background_white_with_blue_border.xml
+++ b/app/src/main/res/drawable/background_white_with_blue_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white" />
-    <stroke android:width="0.6dp" android:color="#BDBEC2"  />
-    <corners android:radius="4dp" />
+    <stroke android:width="1dp" android:color="@color/colorPrimary"  />
+    <corners android:radius="5dp" />
 </shape>
