--- a/app/src/main/res/layout/fragment_identity_proof.xml
+++ b/app/src/main/res/layout/fragment_identity_proof.xml
@@ -74,12 +74,53 @@
             android:orientation="vertical"
             android:padding="15dp"
             android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="ID Type"
+                android:textSize="16sp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="4dp"/>
 
+
+            <RelativeLayout
+                android:id="@+id/id_type_layout"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/rectangular_blue_solid"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
+                android:padding="5dp">
+
+                <Spinner
+                    android:id="@+id/id_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:entries="@array/spinner_id_type"
+                    android:gravity="center"
+                    android:spinnerMode="dropdown" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="10dp"
+                    app:srcCompat="@drawable/ic_down_chevron"
+                    tools:ignore="VectorDrawableCompat" />
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -92,7 +133,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="National ID NIN"
+                        android:text="ID Number"
                         android:layout_marginBottom="4dp"
                         android:textSize="16sp" />
 
@@ -103,7 +144,8 @@
                         android:padding="10dp"
                         android:background="@drawable/outline_primary"
                         android:inputType="text"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:textSize="14sp"/>
 
                 </LinearLayout>
 
@@ -147,7 +189,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Upload National ID"
+                    android:text="Upload ID Photo"
                     android:textSize="16sp"
                     android:layout_marginBottom="4dp"/>
                 <LinearLayout
@@ -165,7 +207,8 @@
                         android:background="@android:color/transparent"
                         android:inputType="text"
                         android:padding="10dp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/txt_browse_national_id_photo"
@@ -206,7 +249,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="7"
                         android:background="@android:color/transparent"
-
+                        android:textSize="14sp"
                         android:inputType="text"
                         android:padding="10dp"
                         android:textColor="#000" />
@@ -252,7 +295,8 @@
                         android:background="@android:color/transparent"
                         android:inputType="text"
                         android:padding="10dp"
-                        android:textColor="#000"/>
+                        android:textColor="#000"
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/txt_browse_photo_with_id"
