--- a/app/src/main/res/layout/fragment_personal_details.xml
+++ b/app/src/main/res/layout/fragment_personal_details.xml
@@ -55,7 +55,7 @@
         app:spb_maxStateNumber="four"
         app:spb_animationDuration="500"
         app:spb_maxDescriptionLines="2"
-        app:spb_stateDescriptionSize="16sp"
+        app:spb_stateDescriptionSize="14sp"
         app:spb_stateBackgroundColor="#BDBDBD"
         app:spb_stateDescriptionColor="#808080"
         app:spb_stateForegroundColor="@color/colorPrimary"
@@ -89,7 +89,8 @@
                 android:background="@drawable/outline_primary"
                 android:inputType="text"
                 android:textColor="@color/black"
-                android:layout_marginTop="4dp" />
+                android:layout_marginTop="4dp"
+                android:textSize="14sp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -107,7 +108,8 @@
                 android:padding="10dp"
                 android:background="@drawable/outline_primary"
                 android:inputType="text"
-                android:textColor="#000" />
+                android:textColor="#000"
+                android:textSize="14sp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -124,7 +126,8 @@
                 android:padding="10dp"
                 android:background="@drawable/outline_primary"
                 android:inputType="text"
-                android:textColor="#000" />
+                android:textColor="#000"
+                android:textSize="14sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -139,7 +142,8 @@
                 android:padding="10dp"
                 android:textColor="@color/white"
                 android:background="@drawable/rectangular_blue_solid"
-                android:drawableEnd="@drawable/ic_down_chevron" />
+                android:drawableEnd="@drawable/ic_down_chevron"
+                android:textSize="14sp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -161,13 +165,12 @@
                 android:clickable="true"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:longClickable="false"/>
+                android:longClickable="false"
+                android:textSize="14sp"/>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="20dp"
-                android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rectangular_blue_solid"
                 android:gravity="right">
